corrijo detalles finales

--- a/html/guias.html
+++ b/html/guias.html
@@ -84,7 +84,7 @@
               fecha cuando los días se van haciendo más cortos y las noches más largas y en interior seremos nosotros quien les cambiemos las
               horas de luz para que tenga las noches más largas y comience a florecer. Os diremos como cultivar marihuana en común, en las dos
               formas de cultivar haremos lo mismo, los mismos pasos que son los siguientes, y después los resumiremos uno a uno con la máxima
-              información. <a href="https://www.growbarato.net/blog/como-cultivar-marihuana/" type="button" >Leer más</a></p>
+              información. <a href="https://www.growbarato.net/blog/como-cultivar-marihuana/" type="button" target="_blank">Leer más</a></p>
           </div>
         </div>
       </section>
@@ -98,7 +98,7 @@
               hacer mi primera contribución a esta columna. En este artículo brindaremos únicamente información sobre cultivo de marihuana en
               interior, con el fin de mantener las cosas fáciles. Si eres nuevx en el mundo de la marihuana (y especialmente en el del cultivo),
               estoy seguro que ya te debes haber sentido abrumadx. Aquí intentaremos desglosar lo esencial para comenzar tu viaje. Lo
-              llamaremos algo así como “una introducción al cultivo de marihuana en interior”.<a href="https://elplanteo.com/cultivo-de-marihuana-en-interior/" type="button">Leer más</a></p>
+              llamaremos algo así como “una introducción al cultivo de marihuana en interior”.<a href="https://elplanteo.com/cultivo-de-marihuana-en-interior/" type="button" target="_blank">Leer más</a></p>
           </div>
         </div>
       </section>
@@ -109,7 +109,7 @@
             <img src="../multimedia/imagenes/exterior.jpeg" alt="cultivo exterior">
             <p class="card-text">Cuidar una planta de marihuana para conseguir un desarrollo óptimo no siempre es sencillo, y depende en gran medida a la zona de
               cultivo. En principio es más fácil cultivar en el jardín de tu casa que en medio de la naturaleza, lo que se conoce como "cultivo
-              de guerrilla".<a href="https://www.diosaplanta.com/blog/-cultivo-basico-de-marihuana-en-exterior-b35.html" type="button" >Leer más</a></p>
+              de guerrilla".<a href="https://www.diosaplanta.com/blog/-cultivo-basico-de-marihuana-en-exterior-b35.html" type="button" target="_blank" >Leer más</a></p>
           </div>
         </div>
       </section>
@@ -122,7 +122,7 @@
               cultivador es que sus plantas se infecten con plagas. Esto se debe a que no eres el único al que le gusta el cannabis, hay al menos
               100 organismos que se alimentan de la marihuana. Es por ello que es importante prevenir este escenario, los insectos y/o ácaros que
               aparecen en nuestras plantas generalmente se debe a una mala limpieza en el área de cultivo o condiciones ambientales que
-              propician su aparición y posterior propagación.<a href="https://houseofweed.cl/blogs/cultivo/plagas-marihuana" type="button" >Leer más</a></p>
+              propician su aparición y posterior propagación.<a href="https://houseofweed.cl/blogs/cultivo/plagas-marihuana" type="button" target="_blank" >Leer más</a></p>
           </div>
         </div>
       </section>
@@ -136,7 +136,7 @@
               femeninas producen flores o “cogollos” femeninos y, para producir semillas, necesitan ser polinizadas por una planta de cannabis
               masculina. Cuando las plantas femeninas se ven privadas del polen de las plantas masculinas, producen cogollos más grandes y gordos
               sin semillas. Suelen llamarse “sinsemilla” (“sin semilla” en español) y es el producto más comúnmente encontrado en
-              dispensarios, tiendas y rendimientos de cultivo casero por igual.<a href="https://growithjane.com/es/guia-de-cultivo-de-cannabis/" type="button" >Leer más</a></p>
+              dispensarios, tiendas y rendimientos de cultivo casero por igual.<a href="https://growithjane.com/es/guia-de-cultivo-de-cannabis/" type="button" target="_blank" >Leer más</a></p>
           </div>
         </div>
       </section>
@@ -152,15 +152,15 @@
         <h3>Seguinos en</h3>
         <ul>
           <li>
-            <a href="https://www.instagram.com/"><img src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="icono instagram"/>
+            <a href="https://www.instagram.com/" target="_blank"><img src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="icono instagram"/>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/"><img src="../multimedia/iconos/facebook_icon-icons.com_53612.svg" alt="icono facebook"/>
+            <a href="https://www.facebook.com/" target="_blank"><img src="../multimedia/iconos/facebook_icon-icons.com_53612.svg" alt="icono facebook"/>
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=es"><img src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg" alt="icono twiter"/>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg" alt="icono twiter"/>
             </a>
           </li>
         </ul>
