--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
         <div class="card-group m-5">
           <div class="card podio" data-aos="flip-left">
             <img src="./multimedia/imagenes/SMG-logo-dark.png" alt="logo de SanMari"/>
-            <a href="https://www.instagram.com/sanmarigrow/?hl=es-la" >Visitar</a>
+            <a href="https://www.instagram.com/sanmarigrow/?hl=es-la" target="_blank" >Visitar</a>
           </div>
           <div class="card podio" data-aos="flip-up">
             <img src="./multimedia/imagenes/logocultivarg.png" alt="logo de cultivarg"/>
-            <a href="https://www.instagram.com/cultivarg/?hl=es-la" >Visitar</a>
+            <a href="https://www.instagram.com/cultivarg/?hl=es-la" target="_blank" >Visitar</a>
           </div>
           <div class="card podio" data-aos="flip-right">
             <img src="./multimedia/imagenes/52366916_2275437389392278_3147366203605909504_n.jpg" alt="logo de lugannabis"/>
-            <a href="https://www.instagram.com/lugannabis/" >Visitar</a>
+            <a href="https://www.instagram.com/lugannabis/"target="_blank" >Visitar</a>
           </div>
         </div>
       </section>
@@ -130,7 +130,7 @@
             </h2>
             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
               <div class="accordion-body noticias__info">
-                <strong>Podrá inscribirse en el REPROCANN toda persona que cuente con</strong> 1) indicación médica 2)haya firmado el consentimiento informado correspondiente, en las condiciones establecidas por el PROGRAMA. 3) haya cumplido con los requisitos y los trámites solicitados por el PROGRAMA en tiempo y forma.<a href="https://www.argentina.gob.ar/salud/cannabis-medicinal/frecuentes">Saber más</a>
+                <strong>Podrá inscribirse en el REPROCANN toda persona que cuente con</strong> 1) indicación médica 2)haya firmado el consentimiento informado correspondiente, en las condiciones establecidas por el PROGRAMA. 3) haya cumplido con los requisitos y los trámites solicitados por el PROGRAMA en tiempo y forma.<a href="https://www.argentina.gob.ar/salud/cannabis-medicinal/frecuentes" target="_blank">Saber más</a>
               </div>
             </div>
           </div>
@@ -140,7 +140,7 @@
             </h2>
             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
               <div class="accordion-body noticias__info">
-                <strong>¿Se puede cultivar en exterior o no?</strong>La respuesta es: sí A las pocas horas, el Ministerio de Salud emitió un comunicado que disipó la preocupación que había despertado este último punto. Es que gran parte de lxs usuarixs de cannabis medicinal lleva adelante sus cultivos en exterior.<a href="#">Saber más </a>
+                <strong>¿Se puede cultivar en exterior o no?</strong>La respuesta es: sí A las pocas horas, el Ministerio de Salud emitió un comunicado que disipó la preocupación que había despertado este último punto. Es que gran parte de lxs usuarixs de cannabis medicinal lleva adelante sus cultivos en exterior.<a href="https://www.growbarato.net/blog/cultivo-basico-de-marihuana-en-exterior-outdoor/" target="_blank">Saber más </a>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
             </h2>
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
               <div class="accordion-body noticias__info">
-                <strong>La planta de cannabis se utilizó por miles de años en distintas culturas alrededor del mundo para distintos fines, entre ellos, la medicina.</strong>La planta posee distintos principios activos, denominados Cannabinoides. Estos Cannabinoides, en un número de más de 60, tienen distintas funciones,algunas descubiertas, y en su mayoría sin tener en claro aún cual es propósito. Estos Cannabinoides, por estar dentro de la planta se denominan Fitocannabinoides.<a href="https://cannabismedicinal.com.ar/cannabis-medicinal">Saber más</a>
+                <strong>La planta de cannabis se utilizó por miles de años en distintas culturas alrededor del mundo para distintos fines, entre ellos, la medicina.</strong>La planta posee distintos principios activos, denominados Cannabinoides. Estos Cannabinoides, en un número de más de 60, tienen distintas funciones,algunas descubiertas, y en su mayoría sin tener en claro aún cual es propósito. Estos Cannabinoides, por estar dentro de la planta se denominan Fitocannabinoides.<a href="https://cannabismedicinal.com.ar/cannabis-medicinal" target="_blank">Saber más</a>
               </div>
             </div>
           </div>
@@ -177,13 +177,13 @@
         <h3>Seguinos en</h3>
         <ul>
           <li>
-            <a href="https://www.instagram.com/"><img src="./multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="icono instagram"/></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="icono instagram"/></a>
           </li>
           <li>
-            <a href="https://www.facebook.com/"><img src="./multimedia/iconos/facebook_icon-icons.com_53612.svg" alt="icono facebook"/></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="./multimedia/iconos/facebook_icon-icons.com_53612.svg" alt="icono facebook"/></a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=es"><img src="./multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg" alt="icono twiter"/></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="./multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg" alt="icono twiter"/></a>
           </li>
         </ul>
       </div>
